--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@egoist/tipc": "^0.3.2",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
+    "nano-spawn": "^1.0.2",
     "paneforge": "^0.0.6"
   },
   "devDependencies": {
