feat: show video duration

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@egoist/tipc": "^0.3.2",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
