--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3",
     "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
     "nano-spawn": "^1.0.2",
@@ -36,6 +37,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
     "bits-ui": "0.22.0",
