--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
     "typecheck": "npm run typecheck:node && npm run svelte-check",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev | pino-pretty",
     "dev:watch": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -27,7 +27,8 @@
     "fluent-ffmpeg": "^2.1.3",
     "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
-    "paneforge": "^0.0.6"
+    "paneforge": "^0.0.6",
+    "pino": "^9.7.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -45,6 +46,7 @@
     "eslint": "^9.27.0",
     "eslint-config-neon": "^0.2.7",
     "eslint-plugin-svelte": "^3.5.1",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
