--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "@fontsource/geist-mono": "^5.2.6",
+    "@fontsource/geist-sans": "^5.2.5",
+    "@tailwindcss/postcss": "^4.1.10",
     "fluent-ffmpeg": "^2.1.3",
     "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
@@ -34,28 +37,29 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@internationalized/date": "^3.8.1",
+    "@lucide/svelte": "^0.513.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
-    "bits-ui": "0.22.0",
+    "bits-ui": "2.7.0",
     "clsx": "^2.1.1",
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.27.0",
-    "eslint-config-neon": "^0.2.7",
-    "eslint-plugin-svelte": "^3.5.1",
+    "eslint-plugin-svelte": "^3.9.2",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "svelte": "^5.26.1",
     "svelte-check": "^4.1.5",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vite": "^6.2.6"
   },
@@ -63,27 +67,6 @@
     "onlyBuiltDependencies": [
       "electron",
       "esbuild"
-    ],
-    "overrides": {
-      "eslint-config-neon>@angular-eslint/eslint-plugin": "@favware/skip-dependency@latest",
-      "eslint-config-neon>@angular-eslint/eslint-plugin-template": "@favware/skip-dependency@latest",
-      "eslint-config-neon>@angular-eslint/template-parser": "@favware/skip-dependency@latest",
-      "eslint-config-neon>@next/eslint-plugin-next": "@favware/skip-dependency@latest",
-      "eslint-config-neon>@stylistic/eslint-plugin-jsx": "@favware/skip-dependency@latest",
-      "eslint-config-neon>astro-eslint-parser": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-mdx": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-astro": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-cypress": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-jsx-a11y": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-mdx": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-react": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-react-hooks": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-react-refresh": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-rxjs": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-rxjs-angular": "@favware/skip-dependency@latest",
-      "eslint-config-neon>eslint-plugin-vue": "@favware/skip-dependency@latest",
-      "eslint-config-neon>vue-eslint-parser": "@favware/skip-dependency@latest",
-      "@egoist/tipc>@tanstack/react-query": "@favware/skip-dependency@latest"
-    }
+    ]
   }
 }
