--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/postcss": "^4.1.10",
     "fluent-ffmpeg": "^2.1.3",
-    "hotkeys-js": "^3.13.10",
     "lucide-svelte": "^0.511.0",
+    "mousetrap": "^1.6.5",
     "paneforge": "^0.0.6",
     "pino": "^9.7.0"
   },
@@ -41,6 +41,7 @@
     "@lucide/svelte": "^0.513.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
     "bits-ui": "2.7.0",
