--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/postcss": "^4.1.10",
     "fluent-ffmpeg": "^2.1.3",
-    "lucide-svelte": "^0.511.0",
+    "lucide-svelte": "^0.515.0",
+    "mode-watcher": "^1.0.8",
     "mousetrap": "^1.6.5",
     "paneforge": "^0.0.6",
     "pino": "^9.7.0"
@@ -38,7 +39,6 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@internationalized/date": "^3.8.1",
-    "@lucide/svelte": "^0.513.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/mousetrap": "^1.6.15",
