--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@internationalized/date": "^3.8.1",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/mousetrap": "^1.6.15",
