chore: enable strictNullCheck

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -23,7 +23,8 @@
       ],
       "@renderer/*": [
         "src/renderer/src/*"
-      ]
-    }
+      ],
+    },
+    "strictNullChecks": true
   }
 }
