--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
     "eslint-plugin-svelte": "^3.9.2",
+    "globals": "^16.2.0",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
