--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@iconify-json/tabler": "^1.2.19",
     "@internationalized/date": "^3.8.1",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -69,6 +70,7 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
+    "unplugin-icons": "^22.1.0",
     "vite": "^6.2.6"
   },
   "pnpm": {
