--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fontsource/geist-mono": "^5.2.6",
     "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/postcss": "^4.1.10",
+    "consola": "^3.4.2",
     "eslint": "^9.29.0",
     "eslint-config-neon": "^0.2.7",
     "fluent-ffmpeg": "^2.1.3",
@@ -41,6 +42,7 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@iconify-json/tabler": "^1.2.19",
     "@internationalized/date": "^3.8.1",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -48,7 +50,7 @@
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
-    "bits-ui": "2.7.0",
+    "bits-ui": "2.8.8",
     "clsx": "^2.1.1",
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
@@ -68,6 +70,7 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
+    "unplugin-icons": "^22.1.0",
     "vite": "^6.2.6"
   },
   "pnpm": {
