wip: redesign keyboard shortcuts tab

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       "$lib/*": [
         "src/renderer/src/lib/*"
       ],
+      "$hooks/*": [
+        "src/renderer/src/hooks/*"
+      ],
       "$main/*": [
         "src/main/*"
       ],
