--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -30,6 +30,9 @@
       "$lib/*": [
         "src/renderer/src/lib/*"
       ],
+      "$hooks/*": [
+        "src/renderer/src/hooks/*"
+      ],
       "$main/*": [
         "src/main/*"
       ],
