--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
-    "@fontsource/geist-mono": "^5.2.6",
-    "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/postcss": "^4.1.10",
     "consola": "^3.4.2",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-svelte": "^0.515.0",
     "mode-watcher": "^1.0.8",
     "mousetrap": "^1.6.5",
-    "paneforge": "^0.0.6"
+    "paneforge": "^0.0.6",
+    "runed": "^0.31.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -47,7 +46,7 @@
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
-    "bits-ui": "2.8.8",
+    "bits-ui": "2.8.11",
     "clsx": "^2.1.1",
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
