--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
     "@iconify-json/tabler": "^1.2.19",
     "@internationalized/date": "^3.8.1",
     "@lucide/svelte": "^0.515.0",
@@ -52,10 +54,11 @@
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.18.0",
     "eslint-config-neon": "^0.2.7",
-    "eslint-plugin-svelte": "^3.9.2",
-    "globals": "^16.2.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-svelte": "^3.0.0",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
@@ -67,7 +70,7 @@
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
+    "typescript-eslint": "^8.20.0",
     "unplugin-icons": "^22.1.0",
     "vite": "^6.2.6"
   },
