--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@iconify-json/lucide": "^1.2.58",
     "@tailwindcss/postcss": "^4.1.10",
+    "@thisux/sveltednd": "^0.0.20",
     "consola": "^3.4.2",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-svelte": "^0.515.0",
