--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,12 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[svelte]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "svelte.svelte-vscode"
   },
   "svelte.enable-ts-plugin": true,
-  "eslint.validate": ["javascript", "javascriptreact", "svelte"]
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "svelte"
+  ]
 }
