--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "dev:watch": "electron-vite dev --watch",
+    "copy:fonts": "node scripts/copy-fonts.mjs",
+    "prebuild": "npm run copy:fonts",
     "build": "npm run typecheck && electron-vite build",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
