--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "dev:watch": "electron-vite dev --watch",
+    "copy:fonts": "node scripts/copy-fonts.mjs",
+    "prebuild": "npm run copy:fonts",
     "build": "npm run typecheck && electron-vite build",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
@@ -25,10 +27,12 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "@fontsource/ibm-plex-mono": "^5.2.7",
+    "@fontsource/inter": "^5.2.8",
     "@iconify-json/lucide": "^1.2.58",
     "@tailwindcss/postcss": "^4.1.10",
+    "@thisux/sveltednd": "^0.0.20",
     "consola": "^3.4.2",
-    "fluent-ffmpeg": "^2.1.3",
     "lucide-svelte": "^0.515.0",
     "mode-watcher": "^1.0.8",
     "mousetrap": "^1.6.5",
@@ -39,11 +43,12 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
     "@iconify-json/tabler": "^1.2.19",
     "@internationalized/date": "^3.8.1",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.14.1",
     "autoprefixer": "^10.4.21",
@@ -52,10 +57,11 @@
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.18.0",
     "eslint-config-neon": "^0.2.7",
-    "eslint-plugin-svelte": "^3.9.2",
-    "globals": "^16.2.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-svelte": "^3.0.0",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
@@ -67,7 +73,7 @@
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
+    "typescript-eslint": "^8.20.0",
     "unplugin-icons": "^22.1.0",
     "vite": "^6.2.6"
   },
